Opdracht_4
tot zover klaar I guess.